Add SonarCloud integration for WhatsApp Backend
- Create SONARQUBE.md for SonarCloud setup and configuration instructions.
- Implement run-sonar.sh script for executing SonarCloud analysis.
- Add sonar-project.properties for SonarCloud project configuration.